# secret-redact-io

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASE_NOTES.md  USAGE.md  pyproject.toml
.github/workflows/: tests.yml
docs/brand/: README.md
docs/superpowers/plans/: 2026-06-16-io-guardrails.md  2026-06-16-secret-redact-io.md
examples/: demo.py
project-docs/: public-boundary.md
project-docs/specs/: SPEC-secret-redact-io-forward-delivery.md
scripts/: check_public_surface.py
src/io_guardrails/: cli.py  exec_io.py  fetch_io.py  receipts.py
src/secret_redact_io/: __init__.py  cli.py  fetch_io.py  file_io.py  models.py  redaction.py
tests/: conftest.py  test_cli.py  test_exec.py  test_fetch.py  test_file_io.py  test_public_surface.py  test_receipts.py  test_redaction.py
