[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "io-guardrails"
version = "0.1.0"
description = "Guarded file, fetch, and subprocess IO with redaction and hash-only receipts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zain Dana Harper" }]
keywords = ["audit", "guardrails", "provenance", "redaction", "safe-io"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
io-guard = "io_guardrails.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
