[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-redact-io"
version = "0.1.0"
description = "Stdlib-only guarded file/fetch/subprocess IO: strips API keys, tokens, and PEM keys; emits hash-only receipts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zain Dana Harper" }]
keywords = ["audit", "guardrails", "provenance", "redaction", "safe-io"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/secret-redact-io"
Repository = "https://github.com/HarperZ9/secret-redact-io"
Issues = "https://github.com/HarperZ9/secret-redact-io/issues"

[project.scripts]
secret-redact-io = "secret_redact_io.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
